--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -40,11 +40,18 @@ body{
         
     }
     &__burger{
-        width: 20px;
-        height: 20px;
-        background: red;
+        width: 35px;
+        height: 25px;
+        background: transparent;
         cursor: pointer;
         display: none;
+        position: relative;
+        & span{
+            display: block;
+            width: 35px;
+            height: 2px;
+            background: black;
+        }
     }
     &__inner{
         display: flex;
@@ -502,7 +509,9 @@ body{
 @media  (max-width:790px){
     .header{
        &__burger{
-        display: block;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
         position: relative;
         z-index: 22;
        }
